# rust-ca-app-template

./: Cargo.toml  README.md  diesel.toml
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/game_events/: handlers.rs  mod.rs  serializers.rs
src/api/game_sessions/: handlers.rs  serializers.rs
src/api/games/: handlers.rs  mod.rs  serializers.rs
src/data/: mod.rs
src/data/repositories/: base.rs  game_events_dto.rs  game_events_repo.rs  game_sessions_dto.rs  game_sessions_repo.rs  games_dto.rs  games_repo.rs  mod.rs  query_stuff.rs
src/infrastructure/: error.rs  mod.rs
src/infrastructure/app/: config.rs  container.rs  fabric.rs  mod.rs
src/infrastructure/databases/postgres/: connection.rs  gen_models.rs  mod.rs  schema.rs
src/infrastructure/databases/postgres/migrations/2023-09-11-132247_create_game_and_provider_tables/: down.sql  up.sql
src/infrastructure/databases/postgres/migrations/2023-09-11-132335_create_game_session_and_game_event_tables/: down.sql  up.sql
src/infrastructure/databases/postgres/models/: game_events.rs  game_sessions.rs  games.rs  mod.rs
src/tests/api/: test_todo_controllers.rs
src/use_cases/: base_use_case.rs  mod.rs
src/use_cases/game_events/: mod.rs  models.rs  store_game_event.rs
src/use_cases/game_sessions/: mod.rs  models.rs  start_session.rs
src/use_cases/games/: list_games.rs  mod.rs  models.rs
